# react-flux-event-persist

./: .editorconfig  .gitignore  LICENSE  README.md  react-flux-event-persist.cabal  stack.ghcjs.yaml  stack.yaml
src/React/Flux/Event/: Foreign.hs  Persist.hs
